[package]
name = "unsplash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
[dependencies.windows]
version = "0.43.0"
features = [
  "Foundation",
  "Storage",
  "System",
  "System_UserProfile",
  "Win32_System_Com",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
]
